[package]
name = "cpcontrol"
version = "0.1.0"
authors = ["Matthew Drobnak <matthew@drobnak.com>"]
edition = "2018"

[[bin]]
name = "cpcontrol-f7"
path = "src/main.rs"
required-features = ["nucleo767zi"]

[[bin]]
name = "cpcontrol-f4"
path = "src/main.rs"
required-features = ["nucleof446re"]

[[bin]]
name = "cpcontrol-prod"
path = "src/main.rs"
required-features = ["production"]


[features]
nucleof446re = [ "stm32f4xx-hal" ]
nucleo767zi = ["stm32f7xx-hal"]
production = [ "stm32f4xx-hal" ]


[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
as-slice = "0.1.0"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
nb = "0.1.2"
stm32f7 = "0.11.0"
micromath = "1.0.0"
panic-halt = "0.2.0"
rtcc = "0.2"
ufmt = "0.1.0"
chrono = { version = "0.4.19", default-features = false }

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.heapless]
version  = "0.5.6"
features = ["ufmt-impl"]

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stm32f7xx-hal]
optional = true
git = "https://github.com/mdrobnak/stm32f7xx-hal.git"
features = ["stm32f767","rt"]

[dependencies.stm32f4xx-hal]
optional = true
git = "https://github.com/mdrobnak/stm32f4xx-hal.git"
features = ["stm32f446","rt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
