[package]
name = "cpcontrol"
version = "0.2.0"
authors = ["Matthew Drobnak <matthew@drobnak.com>"]
edition = "2018"

[[bin]]
name = "cpcontrol-f7"
path = "src/main.rs"
required-features = ["nucleof767zi"]

[[bin]]
name = "cpcontrol-f4"
path = "src/main.rs"
required-features = ["nucleof446re"]

[[bin]]
name = "cpcontrol-prod"
path = "src/main.rs"
required-features = ["production"]

[[bin]]
name = "cpcontrol-24"
path = "src/main.rs"
required-features = ["twentyfour"]

[features]
nucleof446re = ["stm32f4xx-hal","stm32f4xx-hal/stm32f446"]
nucleof767zi = ["stm32f7xx-hal","stm32f7xx-hal/stm32f767"]
production = ["stm32f4xx-hal","stm32f4xx-hal/stm32f405"]
twentyfour = ["stm32f4xx-hal","stm32f4xx-hal/stm32f407"]

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
chrono = { version = "0.4.19", default-features = false }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-rtic = "0.5"
panic-halt = "0.2.0"
rtcc = "0.2"
ufmt = "0.1.0"

[dependencies.heapless]
version  = "0.5.6"
features = ["ufmt-impl"]

[dependencies.stm32f7xx-hal]
optional = true
git = "https://github.com/mdrobnak/stm32f7xx-hal.git"
features = ["rt"]

[dependencies.stm32f4xx-hal]
optional = true
git = "https://github.com/mdrobnak/stm32f4xx-hal.git"
features = ["rt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
